syntax = "proto3";

package presentation.v1;

option java_multiple_files = true;
option java_outer_classname = "PresentationProto";
option java_package = "id.unum.protos.presentation.v1";

import "credential.proto";
import "proof.proto";

/**
 * Encapsulates an unsigned presentation attributes.
 */
message UnsignedPresentation {
    repeated string context = 1;
    repeated string type = 2;
    string presentation_request_id = 3;
    string verifierDid = 4;
    repeated credential.v1.Credential verifiable_credential = 5;
}

/**
 * Encapsulates addition attributes to the unsigned presentation entity to create a Presentation entity.
 * Tightly coupled with UnsignedPresentation.
 */
message Presentation {
    repeated string context = 1;
    repeated string type = 2;
    string presentation_request_id = 3;
    string verifierDid = 4;
    repeated credential.v1.Credential verifiable_credential = 5;
    proof.v1.Proof proof = 6;
}